# smana

./: CITATION.cff  CONTRIBUTING.md  LICENSE.txt  README.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
examples/: tutorial.ipynb
smana/: __init__.py  auxiliary_routines.py  smana.py  utility.py
