[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "smana"
version = "0.1.2"
authors = [
    { name = "ToBe Analytics s.r.l.", email = "info@tobe-analytics.com" },
]
description = "Repairing tool for time series with weekly seasonality"
readme = "README.md"
license = { file = 'LICENSE.txt' }
requires-python = ">=3.7"
dependencies = [
    "statsmodels>=0.12,<0.15",
    "pandas>=1.4,<2.3",
    "numpy>=1.22,<1.27"
]
classifiers = [
    'Development Status :: 4 - Beta',
    'Environment :: Console',
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: BSD License',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Topic :: Scientific/Engineering'
]

[project.urls]
homepage = 'https://tobe-analytics.com'
repository = 'https://github.com/ToBe-Analytics/smana'
